Fixed blog images on mobile when listing them in group page and added changed date to group page.

--- a/public/themes/custom/suomidigi/src/scss/components/content/_group.scss
+++ b/public/themes/custom/suomidigi/src/scss/components/content/_group.scss
@@ -77,6 +77,15 @@
     }
   }
 
+  &__updated {
+    @include border('top');
+    padding-top: $gutter * 2;
+
+    .label {
+      @include font-weight($semibold);
+    }
+  }
+
   &__sidebar {
     order: 1;
 
